--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,14 @@ body {
     grid-template-columns: 15% 15% 15% 15% 15% 25%;
     grid-template-rows: auto;
     grid-template-areas: 
-    ". . heading heading . ."
-    "sleeveRoll sleeveRoll bioTitle . . ."
-    "sleeveRoll sleeveRoll bio bio bio ."
+    ". . heading heading . swirl"
+    "sleeveRoll sleeveRoll bioTitle . . swirl"
+    "sleeveRoll sleeveRoll bio bio bio swirl"
     "sleeveRoll sleeveRoll bio bio bio ."
     "sleeveRoll sleeveRoll bio bio bio ."
     "sleeveRoll sleeveRoll . . . ."
-    "sleeveRoll sleeveRoll linkedIn linkedIn . ."
+    "sleeveRoll sleeveRoll . . . ."
+    "linkedIn linkedIn . . . ."
     ". projectsHead projectsHead . . ."
     ". p1title . p2title . ."
     ". p1image p1tech p2image p2tech ."
@@ -24,6 +25,11 @@ body {
     ". details details form form form"
     ". details details form form form";
     justify-content: stretch;
+}
+
+#swirl {
+    max-width: 100%;
+    grid-area: swirl;
 }
 
 h1 {
@@ -44,13 +50,10 @@ h1 {
 }
 
 #linkedInImage {
+    padding-top: 10%;
     max-width: 10rem;
-    grid-area: linkedIn;
+    display: flex;
 }
-
-/* #linkedIn {
-    grid-area: linkedIn;
-} */
 
 #projects {
     grid-area: projects;
