--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,20 @@
 body {
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 200;
     background-color: black;
     color: whitesmoke;
     display: grid;
     grid-template-columns: 15% 15% 15% 15% 15% 25%;
     grid-template-rows: auto;
     grid-template-areas: 
-    ". . heading heading . swirl"
-    "sleeveRoll sleeveRoll bioTitle . . swirl"
-    "sleeveRoll sleeveRoll bio bio bio swirl"
-    "sleeveRoll sleeveRoll bio bio bio ."
-    "sleeveRoll sleeveRoll bio bio bio ."
+    ". . heading heading swirl swirl"
+    "sleeveRoll sleeveRoll bioTitle . swirl swirl"
+    "sleeveRoll sleeveRoll bio bio swirl swirl"
+    "sleeveRoll sleeveRoll bio bio swirl swirl"
+    "sleeveRoll sleeveRoll linkedIn linkedIn swirl swirl"
     "sleeveRoll sleeveRoll . . . ."
     "sleeveRoll sleeveRoll . . . ."
-    "linkedIn linkedIn . . . ."
+    ". . . . . ."
     ". projectsHead projectsHead . . ."
     ". p1title . p2title . ."
     ". p1image p1tech p2image p2tech ."
@@ -39,6 +41,7 @@ h1 {
 #sleeveRoll {
     grid-area: sleeveRoll;
     max-width: 100%;
+    padding-right: 10px;
 }
 
 #bioTitle {
@@ -52,7 +55,11 @@ h1 {
 #linkedInImage {
     padding-top: 10%;
     max-width: 10rem;
-    display: flex;
+    /* display: flex; */
+}
+
+#linkedIn {
+    grid-area: linkedIn;
 }
 
 #projects {
